# STM32L476RG

./: CMakeLists.txt  README.md  SETUP.md  STM32L476RGTX_FLASH.ld
Inc/: gpio.h  systick.h  uart.h
Src/: gpio.c  main.c  systick.c  uart.c
cmake/: arm-none-eabi-gcc.cmake
